--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
   "name": "devblog",
-  "description": "GatsbyJS blog template for developers",
+  "description": "GatsbyJS blog",
   "version": "2.0.0",
-  "author": "Ryan Fitzgerald <ryanfitzgeralddev@gmail.com>",
+  "author": "Allanice001",
   "bugs": {
-    "url": "https://github.com/ryanfitzgerald/devblog/issues"
+    "url": "https://github.com/allanice001/linaccess/issues"
   },
   "dependencies": {
-    "gatsby": "^2.0.31",
-    "gatsby-image": "^1.0.55",
-    "gatsby-paginate": "^1.0.16",
-    "gatsby-plugin-feed": "^2.0.8",
-    "gatsby-plugin-google-analytics": "^2.0.6",
-    "gatsby-plugin-manifest": "^2.0.6",
-    "gatsby-plugin-offline": "^2.0.9",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.8",
-    "gatsby-remark-copy-linked-files": "^2.0.5",
-    "gatsby-remark-images": "^2.0.4",
-    "gatsby-remark-prismjs": "^3.0.2",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-filesystem": "^2.0.5",
-    "gatsby-transformer-remark": "^2.1.9",
-    "gatsby-transformer-sharp": "^2.1.5",
-    "lodash": "^4.17.5",
-    "prismjs": "^1.15.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^4.2.0",
-    "styled-normalize": "^8.0.0"
+    "gatsby": "^3.8.0",
+    "gatsby-image": "^3.8.0",
+    "gatsby-paginate": "^1.1.1",
+    "gatsby-plugin-feed": "^3.8.0",
+    "gatsby-plugin-google-analytics": "^3.8.0",
+    "gatsby-plugin-manifest": "^3.8.0",
+    "gatsby-plugin-offline": "^4.8.0",
+    "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-sharp": "^3.8.0",
+    "gatsby-remark-copy-linked-files": "^4.5.0",
+    "gatsby-remark-images": "^5.5.0",
+    "gatsby-remark-prismjs": "^5.5.0",
+    "gatsby-remark-responsive-iframe": "^4.5.0",
+    "gatsby-remark-smartypants": "^4.5.0",
+    "gatsby-source-filesystem": "^3.8.0",
+    "gatsby-transformer-remark": "^4.5.0",
+    "gatsby-transformer-sharp": "^3.8.0",
+    "lodash": "^4.17.21",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
-    "gh-pages": "^1.1.0",
-    "prettier": "^1.12.0"
+    "eslint": "^7.29.0",
+    "eslint-plugin-react": "^7.24.0",
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.3.1"
   },
-  "homepage": "https://github.com/ryanfitzgerald/devblog#readme",
+  "homepage": "https://github.com/allanice001/linaccess#readme",
   "keywords": [
     "gatsby",
     "dev",
@@ -49,7 +49,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryanfitzgerald/devblog.git"
+    "url": "git+https://github.com/allanice001/linaccess.git"
   },
   "scripts": {
     "dev": "gatsby develop",
